GL/src/test/deca/syntax/invalid/deca_sans_objet/int_leading_zero.deca
// Description :
// test d’un littéral entier invalide (zero en tete)
//
// Resultat :
// Erreur lexicale
// Ligne 8 : littéral entier invalide
{
012;
}